Improve share card title and spacing

--- a/results.html
+++ b/results.html
@@ -135,7 +135,9 @@
             gap: 4px; /* Consistent spacing between text elements */
         }
         #share-card-score {
-            font-size: 2.5rem; /* Slightly smaller score */ font-weight: 900; line-height: 0.9; /* Tighter line height */
+            font-size: 2.5rem; /* Slightly smaller score */ font-weight: 900; line-height: 1.05;
+            display: block;
+            margin-bottom: 6px; /* Extra breathing room before the grade */
         }
         #share-card-grade-badge {
              /* Grade badge styles */
@@ -143,7 +145,7 @@
              padding: 1px 6px; /* Adjust padding */
              border-radius: 9999px;
              font-size: 0.9rem; /* Larger grade label */ font-weight: 600;
-             margin-bottom: 3px; /* --- MODIFIED: Adjusted space below grade --- */
+             margin-bottom: 2px; /* Preserve a touch of space before title */
              /* Color applied dynamically */
         }
         #share-card-watermark {
@@ -151,6 +153,18 @@
             font-weight: 600; /* Improve readability of the URL */
             letter-spacing: 0.02em; /* Slightly wider spacing for clarity */
             /* Removed width constraint, let flexbox handle it */
+        }
+        #share-card-title {
+            font-size: 0.95rem;
+            font-weight: 700;
+            line-height: 1.35;
+            color: #111827;
+            margin: 0;
+            word-break: break-word;
+            display: -webkit-box;
+            -webkit-line-clamp: 3; /* Allow longer titles to remain visible */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
         #share-card-qrcode {
             width: 110px; /* Increased width for better scanability */ height: 110px; /* Increased height */
@@ -324,6 +338,7 @@
                 <div id="share-card-left">
                     <span id="share-card-score">0.00</span>
                     <span id="share-card-grade-badge">? - ???</span>
+                    <p id="share-card-title"></p>
                     <p id="share-card-watermark">Rating on www.pista-cho.com</p>
                 </div>
                 <div id="share-card-qrcode">
@@ -1284,8 +1299,14 @@
              }
 
             const watermarkEl = document.getElementById('share-card-watermark');
+            const shareTitleEl = document.getElementById('share-card-title');
             if (watermarkEl) {
                  watermarkEl.textContent = 'Rating on www.pista-cho.com';
+            }
+            if (shareTitleEl) {
+                 const shareTitle = data.title || i18next.t('common.noTitle');
+                 shareTitleEl.textContent = shareTitle;
+                 shareTitleEl.title = shareTitle;
             }
 
             const shareCardImage = document.getElementById('share-card-image');
