--- a/results.html
+++ b/results.html
@@ -121,8 +121,8 @@
         #share-card-content {
             padding: 6px 8px 8px; /* Bring content closer to image while keeping horizontal padding */
             display: flex; /* Use flexbox for layout */
-            justify-content: space-between; /* Space between left (score/text) and right (QR) */
-            align-items: flex-start; /* Lift content to align with enlarged QR code */
+            justify-content: flex-start; /* Space now dedicated to text block */
+            align-items: flex-start; /* Lift content to align with image */
             min-height: 75px; /* Adjust min-height as needed, but try to keep it compact */
             gap: 6px; /* Maintain breathing room between sections */
         }
@@ -131,7 +131,6 @@
             flex-direction: column; /* Stack score, grade, watermark */
             justify-content: flex-start; /* Keep score block higher in the card */
             flex-grow: 1; /* Allow left side to take available space */
-            margin-right: 8px; /* Add space between left and QR */
             gap: 4px; /* Slightly tighter spacing to reserve room for long titles */
         }
         #share-card-score {
@@ -155,9 +154,9 @@
             /* Removed width constraint, let flexbox handle it */
         }
         #share-card-title {
-            font-size: 0.95rem;
+            font-size: 0.88rem;
             font-weight: 700;
-            line-height: 1.3;
+            line-height: 1.25;
             color: #111827;
             margin: 0;
             word-break: break-all; /* Support continuous CJK characters */
@@ -165,17 +164,22 @@
             display: -webkit-box;
             -webkit-line-clamp: 3; /* Allow up to ~35 characters across three lines */
             -webkit-box-orient: vertical;
-            max-height: calc(1.3em * 3);
+            max-height: calc(1.25em * 3);
             overflow: hidden;
         }
         #share-card-qrcode {
-            width: 110px; /* Increased width for better scanability */ height: 110px; /* Increased height */
-            flex-shrink: 0; /* Prevent QR code from shrinking */
-            background-color: white; padding: 2px; /* Small padding around QR */
-            border: 1px solid #eee; box-shadow: 0 0 2px rgba(0,0,0,0.1);
+            position: absolute;
+            bottom: 8px;
+            right: 8px;
+            width: 95px; /* Optimized for overlay without blocking the title area */
+            height: 95px;
+            background-color: white;
+            padding: 3px; /* Small padding around QR */
+            border: 1px solid #eee; box-shadow: 0 0 2px rgba(0,0,0,0.12);
             display: flex; /* Center the img tag if needed */
             align-items: center;
             justify-content: center;
+            border-radius: 10px;
         }
         #share-card-qrcode img {
             display: block; width: 100%; height: 100%; object-fit: contain; /* Ensure QR fits */
@@ -334,6 +338,9 @@
                     <span></span>
                     <span></span>
                 </div>
+                <div id="share-card-qrcode">
+                    <!-- QR code img will be added here -->
+                </div>
             </div>
             <!-- --- MODIFIED: Share Card Content Structure --- -->
             <div id="share-card-content">
@@ -342,9 +349,6 @@
                     <span id="share-card-grade-badge">? - ???</span>
                     <p id="share-card-title"></p>
                     <p id="share-card-watermark">Rating on www.pista-cho.com</p>
-                </div>
-                <div id="share-card-qrcode">
-                    <!-- QR code img will be added here -->
                 </div>
             </div>
             <!-- --- End Modified Share Card Content --- -->
