--- a/results.html
+++ b/results.html
@@ -119,64 +119,67 @@
             background-color: rgba(156, 163, 175, 0.8); /* Gray-400 with slight transparency */
         }
         #share-card-content {
-            padding: 6px 8px 8px; /* Bring content closer to image while keeping horizontal padding */
-            display: flex; /* Use flexbox for layout */
-            justify-content: flex-start; /* Space now dedicated to text block */
-            align-items: flex-start; /* Lift content to align with image */
-            min-height: 75px; /* Adjust min-height as needed, but try to keep it compact */
-            gap: 6px; /* Maintain breathing room between sections */
-        }
-        #share-card-left {
+            padding: 10px 14px 14px;
             display: flex;
-            flex-direction: column; /* Stack score, grade, watermark */
-            justify-content: flex-start; /* Keep score block higher in the card */
-            flex-grow: 1; /* Allow left side to take available space */
-            gap: 4px; /* Slightly tighter spacing to reserve room for long titles */
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 6px;
+            background-color: #ffffff;
+        }
+        #share-card-score-row {
+            display: flex;
+            align-items: baseline;
+            gap: 10px;
+            flex-wrap: wrap;
         }
         #share-card-score {
-            font-size: 2.5rem; /* Slightly smaller score */ font-weight: 900; line-height: 0.95; /* Tighter line height */
-            margin-top: -4px; /* Lift score closer to the image */
-            margin-bottom: 2px; /* Add minimal breathing room before grade */
+            font-size: 2.6rem;
+            font-weight: 900;
+            line-height: 1;
+            margin: 0;
         }
         #share-card-grade-badge {
-             /* Grade badge styles */
-             display: inline-block; /* Allow it to sit below score */
-             padding: 1px 6px; /* Adjust padding */
-             border-radius: 9999px;
-             font-size: 0.9rem; /* Larger grade label */ font-weight: 600;
-             margin-bottom: 2px; /* --- MODIFIED: Adjusted space below grade --- */
-             /* Color applied dynamically */
-        }
-        #share-card-watermark {
-            font-size: 0.7rem; color: #4b5563; line-height: 1.2; margin: 0; /* Remove default margin */
-            font-weight: 600; /* Improve readability of the URL */
-            letter-spacing: 0.02em; /* Slightly wider spacing for clarity */
-            /* Removed width constraint, let flexbox handle it */
+            display: inline-flex;
+            align-items: center;
+            padding: 3px 10px;
+            border-radius: 9999px;
+            font-size: 0.9rem;
+            font-weight: 700;
+            /* Color applied dynamically */
         }
         #share-card-title {
-            font-size: 0.88rem;
+            font-size: 0.9rem;
             font-weight: 700;
-            line-height: 1.25;
+            line-height: 1.35;
             color: #111827;
             margin: 0;
-            word-break: break-all; /* Support continuous CJK characters */
+            word-break: break-word;
             overflow-wrap: anywhere;
             display: -webkit-box;
-            -webkit-line-clamp: 3; /* Allow up to ~35 characters across three lines */
+            -webkit-line-clamp: 3; /* Allow up to ~33 characters across three lines */
             -webkit-box-orient: vertical;
-            max-height: calc(1.25em * 3);
+            max-height: calc(1.35em * 3);
             overflow: hidden;
+        }
+        #share-card-watermark {
+            font-size: 0.82rem;
+            color: #4b5563;
+            line-height: 1.3;
+            margin: 2px 0 0;
+            font-weight: 700;
+            letter-spacing: 0.01em;
         }
         #share-card-qrcode {
             position: absolute;
-            bottom: 8px;
-            right: 8px;
-            width: 95px; /* Optimized for overlay without blocking the title area */
-            height: 95px;
-            background-color: white;
-            padding: 3px; /* Small padding around QR */
-            border: 1px solid #eee; box-shadow: 0 0 2px rgba(0,0,0,0.12);
-            display: flex; /* Center the img tag if needed */
+            bottom: 10px;
+            right: 10px;
+            width: 90px;
+            height: 90px;
+            background-color: rgba(255, 255, 255, 0.95);
+            padding: 4px;
+            border: 1px solid #e5e7eb;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
+            display: flex;
             align-items: center;
             justify-content: center;
             border-radius: 10px;
@@ -344,12 +347,12 @@
             </div>
             <!-- --- MODIFIED: Share Card Content Structure --- -->
             <div id="share-card-content">
-                <div id="share-card-left">
+                <div id="share-card-score-row">
                     <span id="share-card-score">0.00</span>
                     <span id="share-card-grade-badge">? - ???</span>
-                    <p id="share-card-title"></p>
-                    <p id="share-card-watermark">Rating on www.pista-cho.com</p>
                 </div>
+                <p id="share-card-title"></p>
+                <p id="share-card-watermark">Rating@www.pista-cho.com</p>
             </div>
             <!-- --- End Modified Share Card Content --- -->
         </div>
@@ -1307,7 +1310,7 @@
             const watermarkEl = document.getElementById('share-card-watermark');
             const shareTitleEl = document.getElementById('share-card-title');
             if (watermarkEl) {
-                 watermarkEl.textContent = 'Rating on www.pista-cho.com';
+                 watermarkEl.textContent = 'Rating@www.pista-cho.com';
             }
             if (shareTitleEl) {
                  const shareTitle = data.title || i18next.t('common.noTitle');
