Update smoking warning age notice

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
          <footer class="mt-8 text-center text-gray-500 text-sm space-y-2">
              <div>Pistacho 雪茄评分社区</div>
              <p class="text-xs text-gray-400" data-i18n="indexPage.smokingWarning">
-                 吸烟酗酒有害健康，本网站含烟酒内容未成年人请回避。
+                吸烟酗酒有害健康，本网站仅供已达到您所在地区的合法年龄的用户访问，未达标者请回避。
              </p>
          </footer>
     </div>
